Issue #21, #22, #23, #24, #25, #27, #28, #29, #30 - Travelode Media realted all APIs integrated
